--- a/shopping_mall/src/main/resources/application.properties
+++ b/shopping_mall/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=testdb
+spring.datasource.password=passwd
