--- a/shopping_mall/build.gradle
+++ b/shopping_mall/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    compileOnly group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.1'
+    compileOnly('org.springframework.boot:spring-boot-starter-jdbc')
 }
 
 tasks.named('test') {
