--- a/shopping_mall/build.gradle
+++ b/shopping_mall/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
     implementation 'org.modelmapper:modelmapper:3.1.0'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
