--- a/shopping_mall/src/main/resources/application.properties
+++ b/shopping_mall/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.show-sql=true
 # Live Reload
 spring.devtools.livereload.enabled=true
 
+# Thymeleaf cache ?? ??
+spring.thymeleaf.cache = false
+
 # Max file size
 spring.servlet.multipart.max-file-size=20MB
 
@@ -23,12 +26,8 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # Item image upload location
-# TODO: update itemImgLocation
 itemImgLocation=/Users/User/Desktop/item
 
-# Resource path
-# TODO: update uploadPath
-uploadPath=file:///Users/User/Desktop
 
 # Spring Security
 #logging.level.org.springframework.security=info
